--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^15.4.2",
     "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
