Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux_rect_fruitstand",
+  "name": "redux_react_fruitstand",
   "version": "0.0.1",
   "description": "Redux and react fruitstand",
   "main": "index.js",
